apps/istio/reference-grants.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: allow-outpost-cross-namespace
  namespace: authentik
spec:
  from:
    # Allow the Longhorn Route
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      namespace: longhorn-system
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      namespace: istio-system
  to:
    - group: ""
      kind: Service
      name: ak-outpost-authentik-proxy
