apps/istio/auth-policy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-only-authentik-longhorn
  namespace: longhorn-system
spec:
  selector:
    matchLabels:
      app: longhorn-frontend
  action: ALLOW
  rules:
  - from:
    - source:
        principals: ["cluster.local/ns/authentik/sa/ak-outpost-authentik-proxy"]
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-only-authentik-kiali
  namespace: istio-system
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: kiali 
  action: ALLOW
  rules:
  - from:
    - source:
        principals: ["cluster.local/ns/authentik/sa/ak-outpost-authentik-proxy"]
